--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Kontrola wydatków</title>
     <style>
-        table,
-        th,
-        tr,
-        td {
-            border: 2px solid black;
-        }
+        table, th, tr, td {border: 2px solid black;}
     </style>
 </head>
 <body style="background-color: rgba(138, 138, 138, 0.493);">
@@ -19,17 +13,13 @@
 <table>
     <thead>
         <th>Tytuł</th>
-        <th>Komu</th>
         <th>Opis</th>
-        <th>Ile</th>
         <th>Opłacone?</th>
     </thead>
-    {% for expens in expens %}
+    {% for expens in expenses %}
     <tr>
-        <td><a href="/books/{{ loop.index }}">{{ expens.title }}</a></td>
-        <td>{{ expens.autor }}</td>
+        <td><a href="/expenses/{{ loop.index }}">{{ expens.title }}</a></td>
         <td>{{ expens.description }}</td>
-        <td>{{ expens.number }}</td>
         <td>{{ expens.done }}</td>
     </tr>
     {% endfor %}
